--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -35,7 +35,7 @@ volume       = {24},
 number       = {5s},
 issn         = {1539-9087},
 preview ={fc.jpg},
-abbr={EMOSOFT},
+abbr={EMSOFT},
 url          = {https://doi.org/10.1145/3761812},
 doi          = {10.1145/3761812},
 google_scholar_id = {WF5omc3nYNoC},
