--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -61,7 +61,8 @@ selected={true}
   year={2024},
   url={https://ieeexplore.ieee.org/abstract/document/10630927},
   slides={icdcs24_v4.pptx},
-  paper={},
+  paper={Latency-Guaranteed_Co-Location_of_Inference_and_Training_for_Reducing_Data_Center_Expenses.pdf},
+  preview ={gpucolo.jpg},
   abbr={ICDCS},
   google_scholar_id = {ufrVoPGSRksC},
   abstract={Today's data centers often need to run various machine learning (ML) applications with stringent SLO (Service-Level Objective) requirements, such as inference latency. To that end, data centers prefer to 1) over-provision the number of servers used for inference processing and 2) isolate them from other servers that run ML training, despite both use GPUs extensively, to minimize possible competition of computing resources. Those practices result in a low GPU utilization and thus a high capital expense. Hence, if training and inference jobs can be safely co-located on the same GPUs with explicit SLO guarantees, data centers could flexibly run fewer training jobs when an inference burst arrives and run more afterwards to increase GPU utilization, reducing their capital expenses. In this paper, we propose GPUColo, a two-tier co-location solution that provides explicit ML inference SLO guarantees for co-located GPUs. In the outer tier, we exploit GPU spatial sharing to dynamically adjust the percentage of active GPU threads allocated to spatially co-located inference and training processes, so that the inference latency can be guaranteed. Because spatial sharing can introduce considerable overheads and thus cannot be conducted at a fine time granularity, we design an inner tier that puts training jobs into periodic sleep, so that the inference jobs can quickly get more GPU resources for more prompt latency control. Our hardware testbed results show that GPUColo can precisely control the inference latency to the desired SLO, while maximizing the throughput of the training jobs co-located on the same GPUs. Our large-scale simulation with a 57-day real-world data center trace (6500 GPUs) also demonstrates that GPU Colo enables latency-guaranteed inference and training co-location. Consequently, it allows 74.9 % of GPUs to be saved for a much lower capital expense.},  
@@ -95,7 +96,7 @@ selected={true}
   pages={85-95},
   url={https://ieeexplore.ieee.org/document/9869892},
   google_scholar_id={UeHWp8X0CEIC},
-  pdf={example_pdf.pdf},
+  pdf={Enabling_High-Level_Design_Strategies_for_High-Throughput_and_Low-Power_NB-LDPC_Decoders.pdf},
   keywords={Decoding;Codes;Symbols;Parity check codes;Data processing;Graphics processing units;Sparse matrices;NB-LDPC;FPGA;GPU;RTL;HLS},
   doi={10.1109/MDAT.2022.3202852}}
 
@@ -112,7 +113,7 @@ selected={true}
   url={https://ieeexplore.ieee.org/document/9885949},
   abstract={Matrix Multiplication has gained importance due to its wide usage in Deep Neural Networks. The presence of sparsity in matrices needs special considerations to avoid redundancy in computations and memory accesses. Sparsity becomes relevant in the choice of compression format for storage and memory access. In addition to compression format, the choice of the algorithm also influences the performance of the matrix multiplier. The interplay of algorithm and compression formats results in significant variations in several performance parameters such as execution time, memory, and total energy consumed. This paper presents MAPPARAT, a custom FPGA-based hardware accelerator for sparse×dense matrix multiplication. Our analysis show that the choice of the compression format is heavily dependent on sparsity of the input matrices. We present two variants of MAPPARAT based on the algorithm used for sparse×dense matrix multiplication, viz., row-wise and column-wise product. A difference in speedup of 2.5× and a difference in energy consumption by about 2.6× is seen between the two variants. We show that an intelligent choice of algorithm and compression format based on the variations in sparsity, matrix dimensions, and device specifications is necessary for performance acceleration. For identical sparse matrices, a speedup of up to 3.6× is observed, when the dense format is chosen for one of the matrices for sparsity in the range of 30% to 90%. MAPPARAT on a resource-constrained device shows performance efficiency of up to 7 GOPs-per-second-per-watt.},
   google_scholar_id={eQOLeE2rZwMC},
-  pdf={example_pdf.pdf},
+  pdf={MAPPARAT_A_Resource_Constrained_FPGA-Based_Accelerator_for_Sparse-Dense_Matrix_Multiplication.pdf},
   keywords={Performance evaluation;Deep learning;Energy consumption;Embedded systems;Redundancy;Neural networks;Very large scale integration},
   doi={10.1109/VLSID2022.2022.00031}
   }
@@ -128,7 +129,7 @@ selected={true}
   number={1},
   abbr={COMST},
   google_scholar_id={qjMakFHDy7sC},
-  pdf={example_pdf.pdf},
+  pdf={A_Survey_on_High-Throughput_Non-Binary_LDPC_Decoders_ASIC_FPGA_and_GPU_Architectures.pdf},
   pages={524--556},
   url={https://ieeexplore.ieee.org/stamp/stamp.jsp?arnumber=9606216},
   year={2021},
@@ -144,7 +145,7 @@ selected={true}
   pages={1-6},
   abstract={Signal processing hardware designers of Low-Density Parity-Check (LDPC) decoders used in modern optical communications are confronted with the need to perform multi-parametric design space exploration, targeting very high throughput (hundreds of Mbit/s) and low-power systems. This work addresses the needs of current designers of dedicated GF(2m) NB-LDPC decoders that necessitate robust approaches for dealing with the ever-increasing demand for higher BER performance. The constraints pose tremendous pressure on the on-chip design of irregular data structures and micro-circuit implementation for supporting the complex Galois field mathematics and communications of hundreds of check nodes with hundreds of variable node processors. We have developed kernels targeting GPU and FPGA (HLS and its equivalent RTL) descriptions of this class of complex circuits for comparing area, frequency of operation, latency, parallelism and throughput. Exploiting techniques such as using custom bit-widths, pipelining, loop-unrolling, array-partitioning and the replication of compute units, results in considerably faster design cycles and demands less non-recurring engineering effort. We report a throughput performance of 800 Mbps for the FPGA case.},
   google_scholar_id={9yKSN-GCB0IC},
-  pdf={example_pdf.pdf},
+  pdf={Gbit_s_Non-Binary_LDPC_Decoders_High-Throughput_using_High-Level_Specifications.pdf},
   url={https://ieeexplore.ieee.org/document/9195258},
   keywords={Field programmable gate arrays;Graphics processing units;Measurement;Kernel;Decoding;Instruction sets;Parity check codes;design space exploration;roofline model;high-throughput;parallelism;low-power;FPGAs;GPUs;RTL;HLS;NB-LDPC decoding},
   doi={10.1109/SiPS50750.2020.9195258}}
@@ -159,7 +160,7 @@ selected={true}
   abstract={It is commonly perceived that an HLS specification targeted for FPGAs cannot provide throughput performance in par with equivalent RTL descriptions. In this work we developed a complex design of a non-binary LDPC decoder, that although hard to generalise, shows that HLS provides sufficient architectural refinement options. They allow attaining performance above CPU- and GPU-based ones and excel at providing a faster design cycle when compared to RTL development.},
   pages={226-226},
   google_scholar_id={d1gkVwhDpl0C},
-  pdf={example_pdf.pdf},
+  pdf={Gbit_s_Non-Binary_LDPC_Decoders_High-Throughput_using_High-Level_Specifications.pdf},
   url={https://ieeexplore.ieee.org/document/9114836},
   keywords={Throughput;Parity check codes;Decoding;Field programmable gate arrays},
   doi={10.1109/FCCM48280.2020.00058}}
@@ -172,7 +173,7 @@ selected={true}
   volume={},
   number={},
   pages={90-95},
-  pdf={example_pdf.pdf},
+  pdf={coin.pdf},
   google_scholar_id={u5HHmVD_uO8C},
   abstract={In Convolutional Neural Networks (CNN), the need for low inference time per batch is crucial for real-time applications. To improve the inference time, we present a method (CoIn) that benefits from the use of multiple devices that execute simultaneously. Our method achieves the goal of low inference time by partitioning images of a batch on diverse micro-architectures. The strategy for partitioning is based on offline profiling on the target devices. We have validated our partitioning technique on CPUs, GPUs and FPGAs that include memory-constrained devices in which case, a re-partitioning technique is applied. An average speedup of 1.39x and 1.5x is seen with CPU-GPU and CPU-GPU-FPGA co-execution respectively. In comparison with the approach of the state-of-the-art, CoIn has an average speedup of 1.62x across all networks.},  url={https://ieeexplore.ieee.org/abstract/document/9074444},
   keywords={Performance evaluation;Graphics processing units;Field programmable gate arrays;Acceleration;Memory management;Time measurement;Computational modeling;CNN;CPU-GPU system;GPU-FPGA system;Data Partitioning;inference acceleration},  
