--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -54,7 +54,7 @@ selected={true}
 }
 
 
-@INPROCEEDINGS{10630927,
+@INPROCEEDINGS{gpucolo2024icdcs,
   author={Chen, Guoyu and Subramaniyan, Srinivasan and Wang, Xiaorui},
   booktitle={2024 IEEE 44th International Conference on Distributed Computing Systems (ICDCS)}, 
   title={Latency-Guaranteed Co-Location of Inference and Training for Reducing Data Center Expenses}, 
