--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -10,7 +10,7 @@ preview={seeb_gpu.jpg},
 address = {New York, NY, USA},
 url = {https://doi.org/10.1145/3769102.3772715},
 doi = {10.1145/3769102.3772715},
-google_scholar_id = {FxGoFyzp5QC},
+google_scholar_id = {_FxGoFyzp5QC},
 pdf = {SEC.pdf},
 abbr={SEC},
 slides= {SEC_2025_Presentation.pptx},
