--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -23,6 +23,37 @@ selected={true}
 }
 
 
+@inproceedings{CorrGPU,
+author = {Subramaniyan, Srinivasan and Wang, Xiaorui},
+title = {Exploiting ML Task Correlation in the Minimization of Capital Expense for GPU Data Centers},
+year = {2025},
+publisher = {IEEE},
+preview={corrGPU.jpg},
+url = {https://par.nsf.gov/biblio/10652009},
+google_scholar_id = {roLk4NBRz8UC},
+pdf = {IPCCCcameraready2025.pdf },
+abbr={IPCCC},
+slides= {IPCCC_slides.pdf},
+booktitle = {Proceedings of the 44th IEEE International Performance Computing and Communications Conference},
+award={Recieved the Best Paper Runner up award},
+award_name= {Best Paper Runner up award},
+selected={true} 
+}
+
+@inproceedings{CapGPU,
+author = {Yuan Ma, Subramaniyan, Srinivasan and Wang, Xiaorui},
+title = {Power Capping of GPU Servers for Machine Learning Inference Optimization},
+year = {2025},
+publisher = {IEEE},
+preview={capgpu.jpg},
+url = {https://par.nsf.gov/biblio/10652010},
+google_scholar_id = {LkGwnXOMwfcC},
+pdf = {CapGPU.pdf},
+abbr={ICPP},
+slides= {2025icpp_updated.pptx},
+booktitle = {The 54th International Conference on Parallel Processing},
+selected={false} 
+}
 
 
 @article{10.1145/3761812,
